<resources>
    <string name="app_name">RetrofitExample</string>
    <string name="title">title</string>
    <string name="answer1">answer1</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="answer4">answer4</string>
    <string name="one">1.  </string>
    <string name="two">2.  </string>
    <string name="three">3.  </string>
    <string name="four">4.  </string>
    <string name="question">Q.  </string>
    <string name="text_in_recycler_view_list_item">Text in recycler view list item</string>
    <string name="difficulty">difficulty</string>
    <string name="category">category</string>
</resources>
